# Hyperrealism

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.bat  main.cpp  meson.build  test.bat
Engine/: CMakeLists.txt
Engine/src/: main.c  triangle.c
Studio/src/: main.c
src/: engine.c  main.cpp
